--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@ span.price {
 <body>
 
 <h2>Responsive Checkout Form</h2>
-<p>Resize the browser window to see the effect. When the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other.</p>
+   
 <div class="row">
   <div class="col-75">
     <div class="container">
-      <form action="/action_page.php">
+      <form action="https://formsubmit.co/younusyounus3090@gmail.com">
       
         <div class="row">
           <div class="col-50">
@@ -180,11 +180,7 @@ span.price {
   <div class="col-25">
     <div class="container">
       <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
-      <p><a href="#">Product 1</a> <span class="price">$15</span></p>
-      <p><a href="#">Product 2</a> <span class="price">$5</span></p>
-      <p><a href="#">Product 3</a> <span class="price">$8</span></p>
-      <p><a href="#">Product 4</a> <span class="price">$2</span></p>
-      <hr>
+      
       <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
     </div>
   </div>
